--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,9 @@ pymupdf==1.25.3
 pytesseract==0.3.13
 pdf2image==1.17.0
 crontab==1.0.1
+# OpenTelemetry dependencies for observability
+opentelemetry-distro[otlp]==0.48b0
+opentelemetry-instrumentation-flask==0.48b0
+opentelemetry-instrumentation-requests==0.48b0
+opentelemetry-instrumentation-urllib3==0.48b0
+opentelemetry-instrumentation-httpx==0.48b0
